--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,10 +5,11 @@ on:
     tags-ignore:
       - '*'
   pull_request:
+  workflow_call:
 
 jobs:
-  docker-build:
-    name: Build Docker image
+  docker-build-and-run:
+    name: Build a Docker image and try some commands in a container created from it
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
@@ -17,14 +18,15 @@ jobs:
         uses: ./.github/actions/docker-build
         with:
           tag: witnet/price-feeds-poller
-
-  docker-run:
-    name: Try some commands in Docker image
-    runs-on: ubuntu-latest
-    needs: ["docker-build"]
-    steps:
       - name: Try to run main command
         run: docker run witnet/price-feeds-poller -h
       - name: Try to run witnet-toolkit
         run: docker run --entrypoint npx witnet/price-feeds-poller witnet-toolkit --version
+      - name: Export docker image into .tar file
+        run: docker save -o /tmp/price-feeds-poller.tar witnet/price-feeds-poller:latest
+      - name: Upload Docker image as an artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: price-feeds-poller.tar
+          path: /tmp/price-feeds-poller.tar
 
