chore: attend pr review comments

--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -9,4 +9,5 @@ runs:
   using: "composite"
   steps:
     - name: Build the image itself
+      shell: bash
       run: docker build -t ${{ inputs.tag }} -f docker/Dockerfile .
