--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": false,
   "scripts": {},
   "dependencies": {
-    "witnet-requests": "~0.9.11"
+    "witnet-toolkit": "^2.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
