--- a/price_feeds_config.json
+++ b/price_feeds_config.json
@@ -404,13 +404,38 @@
         }
       }
     },
+    "optimism": {
+      "networks": {
+        "optimism.sepolia": {
+          "address": "",
+          "blockExplorer": "https://sepolia.etherscan.io/address/{address}",
+          "color": "#ff5599",
+          "name": "Optimism Sepolia",
+          "pollingPeriod": 1500000,
+          "feeds": {
+            "Price-ETH/USD-6": {
+              "label": "$",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 500,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-OP/USDT-6": {
+              "label": "₮",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 900,
+              "minSecsBetweenUpdates": 300
+            }
+          }
+        }
+      }
+    },
     "ethereum": {
       "networks": {
-        "ethereum.goerli": {
-          "address": "0x33ac5ABb4d4cBD757F32E00505b9efd18d475fD7",
-          "blockExplorer": "https://goerli.etherscan.io/address/{address}",
+        "ethereum.sepolia": {
+          "address": "",
+          "blockExplorer": "https://sepolia.etherscan.io/address/{address}",
           "color": "#ff5599",
-          "name": "Ethereum Goerli",
+          "name": "Ethereum Sepolia",
           "pollingPeriod": 1500000,
           "feeds": {
             "Price-BTC/USD-6": {
@@ -728,6 +753,44 @@
             "Price-ETH/USD-6": {
               "label": "$",
               "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 300,
+              "minSecsBetweenUpdates": 300
+            }
+          }
+        }
+      }
+    },
+    "ten": {
+      "name": "TEN",
+      "networks": {
+        "ten.testnet": {
+          "address": "0xE490b89AfADE571d8Afa158446C603D530608ceA",
+          "blockExplorer": "",
+          "color": "#66ff00",
+          "name": "TEN Testnet",
+          "pollingPeriod": 60000,
+          "feeds": {
+            "Price-BTC/USD-6": {
+              "label": "$",
+              "deviationPercentage": 3.5,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 900
+            },
+            "Price-ETH/USD-6": {
+              "label": "$",
+              "deviationPercentage": 3.5,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 900
+            },
+            "Price-WIT/USDT-6": {
+              "label": "₮",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 3600
+            },
+            "Price-USDT/USD-6": {
+              "label": "$",
+              "deviationPercentage": 0.1,
               "maxSecsBetweenUpdates": 300,
               "minSecsBetweenUpdates": 300
             }
