--- a/price_feeds_config.json
+++ b/price_feeds_config.json
@@ -57,6 +57,21 @@
         }
       }
     },
+    "base": {
+      "name": "Base",
+      "networks": {
+        "base.sepolia": {
+          "blockExplorer": "https://base-sepolia.blockscout.com/{address}",
+          "name": "Base ETH/L2 Sepolia",
+          "version": "2.0",
+          "feeds": {
+            "Price-WIT/USDT-6": {
+              "minSecsBetweenUpdates": 300
+            }
+          }
+        }
+      }
+    },
     "boba": {
       "networks": {
         "boba.mainnet": {
